<?xml version="1.0"?>
<package format="3">
  <name>mycobot_320_joy</name>
  <version>0.1.0</version>
  <description>Teleoperation node for myCobot 320 Pi using an Xbox controller (ROS 2 Galactic).</description>
  <maintainer email="user@example.com">RazorGold</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>pymycobot</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
