[metadata]
name = mycobot_320_joy
version = 0.1.0
description = Teleoperation node for Elephant Robotics myCobot 320 Pi using an Xbox controller (ROS2 Galactic)
author = RazorGold
author_email = user@example.com
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    sensor_msgs
    joy
    pymycobot
python_requires = >=3.8

[options.package_data]
* = resource/*

[options.entry_points]
console_scripts =
    mycobot_joy_node = mycobot_320_joy.mycobot_joy:main
